--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.523.0",
-    "next": "15.3.4",
+    "next": "^16.0.7",
     "npm": "^11.4.2",
-    "react": "^19.1.0",
+    "react": "^19.2.1",
     "react-big-calendar": "^1.19.4",
     "react-country-flag": "^3.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-slideshow-image": "^4.3.2"
